[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/Delius-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/new_styleboxfla2t.tres" type="StyleBox" id=2]
[ext_resource path="res://Scenes/MenuOptions.gd" type="Script" id=3]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 300
outline_color = Color( 0.027451, 0.00392157, 0.00392157, 0.784314 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="Theme" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="Theme" id=6]

[sub_resource type="Theme" id=7]

[sub_resource type="Theme" id=8]

[node name="MenuOptions" type="Node2D"]
position = Vector2( -18.8041, -524.881 )
scale = Vector2( 1.6597, 2.20506 )
script = ExtResource( 3 )

[node name="SaveButton" type="Button" parent="."]
margin_left = 529.195
margin_top = 690.777
margin_right = 1145.2
margin_bottom = 1067.78
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
visible = false
margin_left = 393.837
margin_top = 618.297
margin_right = 798.837
margin_bottom = 858.297
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 201.629
margin_top = 691.199
margin_right = 975.629
margin_bottom = 1068.2
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 345.174
margin_top = 691.399
margin_right = 1391.17
margin_bottom = 1068.4
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipButton" type="Button" parent="."]
margin_left = 927.367
margin_top = 691.176
margin_right = 1455.37
margin_bottom = 1068.18
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "skip"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryButton" type="Button" parent="."]
margin_left = 760.26
margin_top = 691.169
margin_right = 1699.26
margin_bottom = 1068.17
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "history"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="."]
margin_left = 642.533
margin_top = 690.14
margin_right = 1225.53
margin_bottom = 1067.14
rect_scale = Vector2( 0.163081, 0.0965537 )
focus_mode = 0
theme = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
text = "load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="HistoryButton" to="." method="_on_HistoryButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
